--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -303,7 +303,22 @@
 
 
 
-    
+.div-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 767px) {
+  .div-center {
+    position: relative;
+    top: auto;
+    bottom: 200px;
+    left: 0%;
+    transform: translate(0%, 0%);
+  }
+}
     
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
